Prevent asterix having its own line
With certain label lengths the * would end up on its own line
Adjusting width of group builder labels / descriptions to be in line with the width of the content labels
Adjusting the margins / padding which looked out of place

--- a/src/Umbraco.Web.UI.Client/src/less/forms.less
+++ b/src/Umbraco.Web.UI.Client/src/less/forms.less
@@ -17,7 +17,6 @@ label small, .guiDialogTiny {
 }
 
 label.control-label, .control-label {
-  padding: 0 10px 0 0 !important;
   font-weight: bold;
   color: @black;
   font-size: 14px;
