--- a/src/Umbraco.Web.UI.Client/src/less/main.less
+++ b/src/Umbraco.Web.UI.Client/src/less/main.less
@@ -216,6 +216,8 @@ umb-property:last-of-type .umb-control-group {
 .umb-control-group .control-header {
     
     .control-label {
+        white-space: break-spaces;
+        overflow-wrap: break-word;
         float: left;
     }
 
@@ -239,13 +241,13 @@ umb-property:last-of-type .umb-control-group {
 .form-horizontal .umb-control-group .control-header {
     float: left;
     width: 160px;
-    padding-top: 5px;
     padding-bottom: 0;
     text-align: left;
     margin-bottom: 5px;
 
     .control-label {
-        width: auto;
+        width: 100%;
+        box-sizing: border-box;
         padding-top: 0;
         text-align: left;
     }
